# sandbox

./: .gitignore  CMakeLists.txt
docs/: doxygen.conf  main.dox
src/api/: CMakeLists.txt  api.c  application.h  module.h  platform.h
src/application/: CMakeLists.txt  application.c  application.h  configuration.c  main.c
src/common/: CMakeLists.txt  common.h  debug.c  debug.h  errors.h
src/common/containers/: buffer.c  buffer.h  vector.c  vector.h
src/common/generic/: object.c  object.h
src/common/memory/: allocate.h
src/common/network/: packet.h  peer.h
src/common/platform/: platform.c
src/common/string/: string.c  string.h
src/configuration/: CMakeLists.txt  configuration.c  configuration.h
src/modules/client/: CMakeLists.txt  module.c
src/modules/example/: CMakeLists.txt  module.c
src/modules/server/: CMakeLists.txt  module.c
src/modules/tracker/: CMakeLists.txt  module.c
src/tests/: CMakeLists.txt
